[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
diesel = { version = "1.4.1", features = ["postgres"] }
diesel_codegen = { version = "0.16.1", features = ["postgres"] }
serde = "1.0"
serde_derive = "1.0"
sqlx = { version = "*", features = [ "chrono" ] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]